# mini_ledger_rust

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  docker-compose.yml  openapi.yml  readme.md
.cargo/: config.toml
.github/workflows/: rust.yml
app_core/: Cargo.toml
app_core/src/: lib.rs
app_core/src/model/: account.rs  transaction.rs
app_core/src/service/: account.rs  mod.rs  transaction.rs  types.rs
app_core/src/storage/: in_memory.rs  mod.rs  types.rs
app_core/src/use_case/: mod.rs  transaction.rs
app_core/src/utils/: mod.rs
base/: Cargo.toml
base/src/dto/: account.rs  transaction.rs
base/src/model/: account.rs  transaction.rs
base/src/storage/: in_memory.rs
base/src/use_case/: account.rs  mod.rs
base/src/use_case/account/: create.rs  get_by_uuid.rs  mod.rs
base/src/use_case/transaction/: deposit.rs  mod.rs  transfer.rs  withdraw.rs
cassandra_storage/: Cargo.toml
cassandra_storage/src/: config.rs  lib.rs  migrate.rs  storage.rs
database/: scheme.sql
dynamo_storage/: Cargo.toml
dynamo_storage/src/: lib.rs  storage.rs  utils.rs
dynamo_storage/src/entity/: account.rs  mod.rs  transaction.rs  utils.rs
e2e/: create-account.http  deposit.http  get-account.http  transfer.http  withdraw.http
proto/: account.proto  transaction.proto
src/: bootstrap.rs  lib.rs  main.rs  mod.rs
src/cassandra/: bootstrap.rs  connection.rs  mod.rs  storage.rs
src/dto/: account.rs  transaction.rs
src/handler/: account.rs  mod.rs  state.rs  transaction.rs
src/model/: account.rs  transaction.rs
src/service/: account.rs  mod.rs  transaction.rs  types.rs
src/storage/: in_memory.rs  mod.rs  types.rs
