[package]
name = "mini_ledger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "base",
    "cassandra_storage"
]

[dependencies]
actix-web = "4.0"
async-trait = "0.1.83"
cassandra-cpp = "3.0.2"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = "0.4"
env_logger = "0.10.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

base = { path = "base" }
cassandra_storage = { path = "cassandra_storage" }