[package]
name = "mini_ledger"
version = "0.1.0"
edition = "2021"

[workspace]
members = [
    "base",
    "cassandra_storage",
    "dynamo_storage",
]

[dependencies]
actix-web = "4.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = "0.4"
env_logger = "0.11.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

base = { path = "base" }
cassandra_storage = { path = "cassandra_storage", optional = true }
dynamo_storage = { path = "dynamo_storage", optional = true }

[features]
default = ["full"]
cassandra_storage = ["dep:cassandra_storage"]
dynamo_storage = ["dep:dynamo_storage"]
full = ["dep:cassandra_storage", "dep:dynamo_storage"]