[package]
name = "app_core"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }