[package]
name = "cassandra_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
bigdecimal = { version = "0.4.7", features = ["serde"] }
cassandra-cpp = "3.0.2"
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

app_core = { path = "../app_core"}