[package]
name = "dynamo_storage"
version = "0.1.0"
edition = "2021"

[dependencies]
async-trait = "0.1.83"
aws-config = { version = "1.1.7", features = ["behavior-version-latest"] }
aws-sdk-dynamodb = "1.57.0"
bigdecimal = { version = "0.4.7", features = ["serde"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.0", features = ["serde", "v4"] }

base = { path = "../base"}